# globipos

./: .gitignore  .replit  USER_MANUAL.md  build-kiosk.sh  package-lock.json  package.json  playwright.config.ts  replit.md  replit.nix  stock-sales-test.mjs  supermarket-test-seed.mjs  vite.config.ts
.agents/: agent_assets_metadata.toml
attached_assets/: Back_Office_-_SM_1783760190086.doc  Back_Office_-_Shops_1783608206564.doc  CPLPOS_FUNCTIONS_1783318812056.doc  CPLPOS_Keyboard_functions_for_SM_1783594388728.doc  CPLPOS_Transaction_Tables,_Stock,_Reference_1783318877385.doc  CPLPOS_Transaction_Tables_1783318877386.doc  CUSTOMER_DETAILS_1777973061149.docx  FC_GASTRONOBILE_LTD_ACCOUNT_STATEMENT_2026_1782379959951.xlsx  Falcon_user_manual3_1783329575153.doc  GASTRO_NOBILE_PRICE_LIST_EXCEL_1777900999677.xlsx  GASTRO_NOBILE_Suppliers_&_Customers_Registry_1779358102535.xlsx  GlobiPOS_Features_-specs_1782470951040.docx  PLU_starting_with_28_1783319831099.doc  Pasted-1-Security-Vite-Babel-dependency-upgrade-File-package-j_1782402448259.txt  Pasted-Here-is-a-complete-instruction-list-covering-every-impr_1782402717166.txt  Pasted-TYPE-OF-VARIETY-RED-DRY-WINE-LEFKADA-ALICANTE-CARIGNAN-_1772617984921.txt  The_format_of_the_Barcode_for_the_scales_1783320233955.doc
client/: index.html
customer-app/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  (+1 more)
customer-app/src-tauri/: Cargo.toml  tauri.conf.json
customer-app/src-tauri/capabilities/: default.json
customer-app/src-tauri/src/: lib.rs  main.rs
pos-app/src-tauri/: Cargo.toml  tauri.conf.json
pos-app/src-tauri/capabilities/: main.json
pos-app/src-tauri/icons/: icon.icns
pos-app/src-tauri/src/: auth.rs  barcode_config.rs  db.rs  hardware.rs  lib.rs  main.rs  migrations.rs  models.rs  orders.rs  sync.rs  tests.rs  vfd.rs
(+250 files in other folders)
