[package]
name = "globi-kiosk"
version = "0.1.0"
description = "GlobiPOS Customer Kiosk"
authors = ["GlobiPOS"]
edition = "2021"

[lib]
name = "globi_kiosk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "globi-kiosk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
