[package]
name = "globipos-terminal"
version = "1.0.0"
description = "GlobiPOS Terminal — offline-first POS app"
authors = ["GlobiPOS"]
license = "UNLICENSED"
repository = ""
edition = "2021"

[lib]
name = "globipos_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-http  = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"

# SQLite via sqlx (Rust-side DB access)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }

sha2       = "0.10"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
thiserror  = "1"

[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = "s"
strip        = true
